--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,22 @@
         android:theme="@style/Theme.TestOTT"
         tools:targetApi="31">
         <activity
+            android:name=".ui.user.UsereditActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.movie.MovieDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.user.JoinActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
